--- a/TeamProject/Views/AdminUsers/Index.cshtml
+++ b/TeamProject/Views/AdminUsers/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout="_AdminLayout";
 }
 
 <h2>Index</h2>
@@ -28,7 +29,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+        @foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Firstname)
