--- a/TeamProject/Views/Shared/_AdminLayout.cshtml
+++ b/TeamProject/Views/Shared/_AdminLayout.cshtml
@@ -15,39 +15,32 @@
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
+    <link rel="stylesheet" href="~/css/panel.css" />
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="AdminUsers" asp-action="Index" class="navbar-brand">TeamProject</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="AdminUsers" asp-action="Index">AdminUsers</a></li>
-                    <li><a asp-area="" asp-controller="AdminUsers" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="AdminUsers" asp-action="Contact">Contact</a></li>
-                </ul>
-                <partial name="_LoginPartial" />
-            </div>
-        </div>
-    </nav>
+    <div class="sidenav">
+        <a href="/AdminUsers">Users</a>
+        <a href="#">Facilities</a>
+        <a href="#">Companies</a>
+        <a href="#">Users Roles</a>
+    </div>
 
     <partial name="_CookieConsentPartial" />
 
-    <div class="container body-content">
+    <div class="main">
+        <h2>Administration Panel</h2>
+        <hr />
         @RenderBody()
         <hr />
         <footer>
             <p>&copy; 2019 - TeamProject</p>
         </footer>
     </div>
+
+
+    @*<div class="container body-content">
+
+        </div>*@
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
