--- a/TeamProject/Views/Shared/_AdminLayout.cshtml
+++ b/TeamProject/Views/Shared/_AdminLayout.cshtml
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TeamProject</title>
-
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
@@ -24,24 +23,20 @@
         <a href="#">Companies</a>
         <a href="#">Users Roles</a>
     </div>
-
     <partial name="_CookieConsentPartial" />
-
     <div class="main">
-        <h2>Administration Panel</h2>
-        <hr />
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2019 - TeamProject</p>
-        </footer>
+        <div class="container body-content">
+            <h2>Administration Panel</h2>
+            <hr />
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; 2019 - TeamProject</p>
+            </footer>
+        </div>
     </div>
 
-
-    @*<div class="container body-content">
-
-        </div>*@
-
+    
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
@@ -62,7 +57,6 @@
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
-
     @RenderSection("Scripts", required: false)
 </body>
 </html>
