--- a/TeamProject/Views/Shared/_AdminLayout.cshtml
+++ b/TeamProject/Views/Shared/_AdminLayout.cshtml
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="sidenav">
-        <a href="/AdminUsers">Users</a>
+        <a href="/Users">Users</a>
         <a href="#">Facilities</a>
         <a href="#">Companies</a>
         <a href="#">Users Roles</a>
