add api/locations controller

--- a/TeamProject/Views/Home/Index.cshtml
+++ b/TeamProject/Views/Home/Index.cshtml
@@ -9,7 +9,8 @@
 
 <input id="pac-input" class="controls" type="text" placeholder="Search Box">
 <div id="map" style="height:400px"></div>
-
+<button id="GetLocations" type="button" class="btn-dark">Get Locations</button>
+<ul id="locations"></ul>
 @section Scripts{
     <script src="~/js/googleapi.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrnm2ptgfajjtlCfM97wat7Jsx5KZ0UoA&libraries=places&callback=initAutocomplete"
