--- a/TeamProject/Content/Site.css
+++ b/TeamProject/Content/Site.css
@@ -1,24 +1,53 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿
+.movie-Thumbnail {
+    height: 300px;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+.bottom {
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+.nav-margin {
+    margin-bottom: 3px;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+.center {
+    position: relative;
+    margin-left: auto;
+    margin-top: 50%;
+}
+
+.margin-toper {
+    margin-top: -25%;
+    margin-bottom: +25%;
+}
+
+.leftmarge {
+    margin-left: 30%;
+}
+
+.test {
+    margin-top: -10%;
+    opacity: 0.5;
+}
+
+.box {
+    padding: 60px 0px;
+}
+
+.box-part {
+    background-color: whitesmoke;
+    border-radius: 0;
+    padding: 60px 10px;
+    margin: 30px 0px;
+}
+
+.text {
+    margin: 20px 0px;
+}
+
+.collor {
+    color: cadetblue;
 }
