--- a/TeamProject/Views/Shared/_Layout.cshtml
+++ b/TeamProject/Views/Shared/_Layout.cshtml
@@ -3,22 +3,20 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - TeamProject</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        @Html.ActionLink("Application name", "Index", new { controller = "Home" },new { @class = "navbar-brand" })
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<body style="background-color: whitesmoke">
+    <nav class="navbar navbar-dark navbar-expand-lg sticky-top bg-dark test">
+        @Html.ActionLink("TeamProject", "Index", "Home", new { area = "" }, new { @class = "navbar-brand font-italic" })
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">@Html.ActionLink("Home", "Index", new { controller = "Home" },  new { @class="nav-link"})</li>
-                <li class="nav-item">@Html.ActionLink("About", "About", new { controller = "Home" }, new  { @class = "nav-link" })</li>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">@Html.ActionLink("Courts", "Index", "Movies", new { area = "" }, new { @class = "navbar-brand" })</li>
+                <li class="nav-item">@Html.ActionLink("About", "About", new { controller = "Home" }, new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("Contact", "Contact", new { controller = "Home" }, new { @class = "nav-link" })</li>
             </ul>
             @Html.Partial("_LoginPartial")
