--- a/TeamProject/Views/Home/Index.cshtml
+++ b/TeamProject/Views/Home/Index.cshtml
@@ -1,31 +1,157 @@
-﻿@{
+﻿@model IEnumerable<TeamProject.Models.>
+@{
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<div id="carouselIndicators" class="carousel slide card-img-top" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
 
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="https://media.architecturaldigest.in/wp-content/uploads/2018/06/FIFA-2018-World-Cup-Featured-1366x768.jpg" alt="First slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>World Cap!</h5>
+                <p>Find Your Court Now!</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="https://static.euronews.com/articles/stories/03/15/68/25/880x495_cmsv2_a9dcd7ed-1ff5-5d7c-8de0-63b847a68c91-3156825.jpg" alt="Second slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>We love Football!</h5>
+                <p>Find Your Court Now!</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="http://s1.1zoom.me/b5752/43/Footbal_Men_Ball_Glove_515345_1366x768.jpg" alt="Third slide">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Ball Court easy to find!</h5>
+                <p>Find Your Court Now!</p>
+            </div>
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="col-md-12 margin-toper">
+        <div class="input-group">
+            <input class="form-control border-secondary py-2 form-control col-md-4 rounded-pill border-success leftmarge" type="search" value="Search">
+            <div class="input-group-append">
+                <button class="btn btn-success rounded-pill" type="submit">Search!</button>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <h2 class="page-item text-center form-text">FIND SOMEHWERE TO PLAY</h2>
+            <p class="text-center">Find football facilities in a range of cities across the Greece<br />Choose a pitch!</p>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="row d-flex justify-content-around ">
+        <br />
+        @foreach (var movie in Model)
+        {
+            <div class="col-md-4 d-none d-sm-block col-sm-6">
+                <div class="card bg-dark text-white rounded ml-3 mt-3 mr-3">
+                    <img src="@movie.ThumbnailUrl" class="card-img movie-Thumbnail" alt="@movie.Title">
+                    <div class="card-img-overlay">
+                        <h4 class="card-title text-center">@movie.Title</h4>
+                        <a href="@movie.TrailerUrl" class="btn btn-block btn-success bottom">Book Now! </a>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+</div>
+@*adding Social Links*@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<div class="box" style="opacity:1;">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="box-part text-center rounded-circle">
+                    <i class="fa fa-instagram fa-3x" aria-hidden="true" style="color: cadetblue;"></i>
+                    <div class="title">
+                        <h4>Instagram</h4>
+                    </div>
+                    <div class="text">
+                        <span>Follow us on Instagram.</span>
+                    </div>
+                    <a href="https://www.instagram.com/">Learn More</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="box-part text-center  rounded-circle">
+                    <i class="fa fa-facebook fa-3x" aria-hidden="true" style="color: cadetblue;"></i>
+                    <div class="title">
+                        <h4>Facebook</h4>
+                    </div>
+                    <div class="text">
+                        <span>Like Us on Facebook</span>
+                    </div>
+                    <a href="https://www.facebook.com">Learn More</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="box-part text-center rounded-circle">
+                    <i class="fa fa-twitter fa-3x" aria-hidden="true" style="color: cadetblue;"></i>
+                    <div class="title">
+                        <h4>Twitter</h4>
+                    </div>
+                    <div class="text">
+                        <span>Follow us on Twitter.</span>
+                    </div>
+                    <a href="https://www.twitter.com">Learn More</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="box-part text-center rounded-circle">
+                    <i class="fa fa-pinterest-p fa-3x" aria-hidden="true" style="color: cadetblue;"></i>
+                    <div class="title">
+                        <h4>Pinterest</h4>
+                    </div>
+                    <div class="text">
+                        <span>Follow us on Pinterest.</span>
+                    </div>
+                    <a href="https://gr.pinterest.com/">Learn More</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="box-part text-center rounded-circle">
+                    <i class="fa fa-google-plus fa-3x" aria-hidden="true" style="color: cadetblue;"></i>
+                    <div class="title">
+                        <h4>Google</h4>
+                    </div>
+                    <div class="text">
+                        <span>Follow us on Google+.</span>
+                    </div>
+                    <a href="https://plus.google.com/discover">Learn More</a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+                <div class="box-part text-center rounded-circle">
+                    <i class="fa fa-github fa-3x" aria-hidden="true" style="color: cadetblue;"></i>
+                    <div class="title">
+                        <h4>Github</h4>
+                    </div>
+                    <div class="text">
+                        <span>Check Our Code on Github.</span>
+                    </div>
+                    <a href="https://github.com/session">Learn More</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
