added Court Controller and Views. Fixed Book Now on shared/layout

--- a/TeamProject/Views/Home/Index.cshtml
+++ b/TeamProject/Views/Home/Index.cshtml
@@ -68,8 +68,7 @@
                     <img src="@court.Name" class="card-img movie-Thumbnail" alt="@court.Name">
                     <div class="card-img-overlay">
                         <h4 class="card-title text-center">@court.Name</h4>
-                            @*TODO*@
-                        <a href="booking" class="btn btn-block btn-success bottom">Book Now! </a>
+                        <a href="~/Views/Courts/Index.cshtml" class="btn btn-block btn-success bottom">Book Now! </a>
                     </div>
                 </div>
             </div>
