--- a/TeamProject/Views/Shared/_Layout.cshtml
+++ b/TeamProject/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">@Html.ActionLink("Courts", "Index", "Movies", new { area = "" }, new { @class = "navbar-brand" })</li>
+                <li class="nav-item active">@Html.ActionLink("Courts", "Index", "Courts", new { area = "" }, new { @class = "navbar-brand" })</li>
                 <li class="nav-item">@Html.ActionLink("About", "About", new { controller = "Home" }, new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("Contact", "Contact", new { controller = "Home" }, new { @class = "nav-link" })</li>
             </ul>
