--- a/TeamProject/Views/Account/Register.cshtml
+++ b/TeamProject/Views/Account/Register.cshtml
@@ -2,10 +2,9 @@
 @{
     ViewBag.Title = "Register";
 }
-
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal topper", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
