Map Search For Branches

--- a/TeamProject/Views/Home/Index.cshtml
+++ b/TeamProject/Views/Home/Index.cshtml
@@ -2,7 +2,10 @@
 @{
     ViewBag.Title = "Home Page";
 }
+@section Styles{
 
+    <link rel="stylesheet" href="~/Content/google-maps.css" />
+}
 <div id="carouselIndicators" class="carousel slide card-img-top" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -45,10 +48,16 @@
 <div class="row">
     <div class="col-md-12 margin-toper">
         <div class="input-group">
-            <input class="form-control border-secondary py-2 form-control col-md-4 rounded-pill border-success leftmarge" type="search" value="Search">
-            <div class="input-group-append">
-                <button class="btn btn-success rounded-pill" type="submit">Search!</button>
-            </div>
+@*            <input id="pac-input" class="controls" type="text" placeholder="Search Box">*@
+            <form id="search" method="post" action="Branches/Nearest" class="form-inline">
+                <input id="pac-input" class="form-control border-secondary py-2 form-control col-md-8 rounded-pill border-success leftmarge" placeholder="Search Your Pitch" type="search">
+                <input id="latitude" hidden name="latitude" type="text" value="">
+                <input id="longitude" hidden name="longitude" type="text" value="">
+                <div id="map" hidden></div>
+                <div class="input-group-append">
+                    <button class="btn btn-success rounded-pill" type="submit">Search!</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
@@ -155,3 +164,11 @@
         </div>
     </div>
 </div>
+
+@section Scripts{
+    <script src="~/Scripts/google-maps.js"></script>
+    @*<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&libraries=geometry"></script>*@
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrnm2ptgfajjtlCfM97wat7Jsx5KZ0UoA&libraries=places&callback=initAutocomplete"
+            async defer></script>
+
+}
