--- a/TeamProject/Views/Shared/_Layout.cshtml
+++ b/TeamProject/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - TeamProject</title>
     @Styles.Render("~/Content/css")
+    @RenderSection("Styles", false)
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body style="background-color: whitesmoke">
