--- a/TeamProject/Views/Home/Index.cshtml
+++ b/TeamProject/Views/Home/Index.cshtml
@@ -71,7 +71,7 @@
         {
             <div class="col-md-4 d-none d-sm-block col-sm-6">
                 <div class="card bg-dark text-white rounded ml-3 mt-3 mr-3">
-                    <img src="@court.Name" class="card-img movie-Thumbnail" alt="@court.Name">
+                    <img src="@court.ImageCourt" class="card-img movie-Thumbnail" alt="@court.Name">
                     <div class="card-img-overlay">
                         <h4 class="card-title text-center">@court.Name</h4>
                         <a href="~/Views/Courts/Index.cshtml" class="btn btn-block btn-success bottom">Book Now! </a>
