--- a/TeamProject/Views/Courts/Edit.cshtml
+++ b/TeamProject/Views/Courts/Edit.cshtml
@@ -12,7 +12,7 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
+    <div class="form-horizontal topper">
         <h4>Court</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
