changed layout shared

--- a/TeamProject/Views/Courts/Index.cshtml
+++ b/TeamProject/Views/Courts/Index.cshtml
@@ -10,7 +10,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+<table class="table" style="margin-top:5%;">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Branch.Name)
