--- a/TeamProject/Views/Shared/_LoginPartial.cshtml
+++ b/TeamProject/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
     @Html.AntiForgeryToken()
 
     <ul class="navbar-nav">
-        <li class="nav-item">
+        <li class="nav-item ml-auto">
             @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage",@class="nav-link" })
         </li>
         <li class="nav-item"><a class ="nav-link" href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
@@ -15,7 +15,7 @@
 }
 else
 {
-    <ul class="navbar-nav">
+    <ul class="navbar-nav ml-auto">
         <li class="nav-item">@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "nav-link" })</li>
         <li class="nav-item">@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "nav-link" })</li>
     </ul>
