--- a/TeamProject/Views/Branches/Index.cshtml
+++ b/TeamProject/Views/Branches/Index.cshtml
@@ -9,7 +9,7 @@
     <div class="card mb-3 rounded rounded-lg border border-success d-flex p-2 bd-highlight d-flex">
         <div class="row no-gutters">
             <div class="col-md-4">
-                <img src="@branch.Court" class="card-img" alt="@branch.Name">
+                <img src="@branch.ImageCourt" class="card-img" alt="@branch.Name">
             </div>
             <div class="col-md-8">
                 <div class="card-body align-content-end flex-column">
