fix timeslot iframe return id

--- a/TeamProject/Views/TimeSlots/Create.cshtml
+++ b/TeamProject/Views/TimeSlots/Create.cshtml
@@ -7,10 +7,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>TimeSlot</h4>
         <hr />
@@ -56,7 +56,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { id = ViewBag.id })
 </div>
 
 @section Scripts {
