--- a/TeamProject/Views/TimeSlots/Edit.cshtml
+++ b/TeamProject/Views/TimeSlots/Edit.cshtml
@@ -58,7 +58,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { id = ViewBag.id })
 </div>
 
 @section Scripts {
