--- a/TeamProject/Views/TimeSlots/Delete.cshtml
+++ b/TeamProject/Views/TimeSlots/Delete.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/_LayoutSubView.cshtml";
 }
 
 <h2>Delete</h2>
@@ -50,7 +51,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "Index", new { id = ViewBag.id })
         </div>
     }
 </div>
