Use Viewbug for create and index only in timeslot

--- a/TeamProject/Views/TimeSlots/Edit.cshtml
+++ b/TeamProject/Views/TimeSlots/Edit.cshtml
@@ -59,7 +59,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index", new { id = ViewBag.id })
+    @Html.ActionLink("Back to List", "Index", new { id = Model.CourtId })
 </div>
 
 @section Scripts {
