--- a/TeamProject/Views/TimeSlots/Delete.cshtml
+++ b/TeamProject/Views/TimeSlots/Delete.cshtml
@@ -51,7 +51,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index", new { id = ViewBag.id })
+            @Html.ActionLink("Back to List", "Index", new { id = Model.CourtId })
         </div>
     }
 </div>
