--- a/TeamProject/Views/TimeSlots/Details.cshtml
+++ b/TeamProject/Views/TimeSlots/Details.cshtml
@@ -47,5 +47,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index", new { id = ViewBag.id })
+    @Html.ActionLink("Back to List", "Index", new { id = Model.CourtId })
 </p>
