remove google api key from Nearest.cshtml

--- a/TeamProject/Views/Branches/Nearest.cshtml
+++ b/TeamProject/Views/Branches/Nearest.cshtml
@@ -14,7 +14,7 @@
             padding-bottom: 10px;
             padding-right: 0px;
             padding-left: 0px;
-            position:relative;
+            position: relative;
         }
     </style>
 }
@@ -49,7 +49,8 @@
 }
 @section scripts
 {
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrnm2ptgfajjtlCfM97wat7Jsx5KZ0UoA&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
+    @*key=AIzaSyDrnm2ptgfajjtlCfM97wat7Jsx5KZ0UoA&*@
     <script>
         var mapzoom = 12;
         var locations = [@Html.Raw(@listOfBranches)];
