--- a/TeamProject/Views/Home/Index.cshtml
+++ b/TeamProject/Views/Home/Index.cshtml
@@ -16,21 +16,21 @@
     <div class="carousel-inner">
 
         <div class="carousel-item active">
-            <img class="d-block w-100" src="https://media.architecturaldigest.in/wp-content/uploads/2018/06/FIFA-2018-World-Cup-Featured-1366x768.jpg" alt="First slide">
+            <img class="d-block w-100" src="~/Images/CarrouselImages/FIFA-2018-World-Cup-Featured-1366x768.jpg" alt="First slide">
             <div class="carousel-caption d-none d-md-block">
                 <h5>World Cap!</h5>
                 <p>Find Your Court Now!</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="https://static.euronews.com/articles/stories/03/15/68/25/880x495_cmsv2_a9dcd7ed-1ff5-5d7c-8de0-63b847a68c91-3156825.jpg" alt="Second slide">
+            <img class="d-block w-100" src="~/Images/CarrouselImages/880x495_cmsv2_a9dcd7ed-1ff5-5d7c-8de0-63b847a68c91-3156825.jpg" alt="Second slide">
             <div class="carousel-caption d-none d-md-block">
                 <h5>We love Football!</h5>
                 <p>Find Your Court Now!</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="http://s1.1zoom.me/b5752/43/Footbal_Men_Ball_Glove_515345_1366x768.jpg" alt="Third slide">
+            <img class="d-block w-100" src="~/Images/CarrouselImages/Footbal_Men_Ball_Glove_515345_1366x768.jpg" alt="Third slide">
             <div class="carousel-caption d-none d-md-block">
                 <h5>Ball Court easy to find!</h5>
                 <p>Find Your Court Now!</p>
