--- a/TeamProject/Views/Shared/_LoginPartial.cshtml
+++ b/TeamProject/Views/Shared/_LoginPartial.cshtml
@@ -1,21 +1,22 @@
-﻿@*@if (Session.IsAuthenticated)
-{
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
-    {
-    @Html.AntiForgeryToken()
-
-    <ul class="navbar-nav">
-        <li class="nav-item ml-auto">
-            @Html.ActionLink("Hello " + User.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage",@class="nav-link" })
-        </li>
-        <li class="nav-item"><a class ="nav-link" href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-    </ul>
-    }
+﻿@using TeamProject.Models;
+@{ 
+    User user = Session["user"] as User;
 }
-else
-{*@
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item">@Html.ActionLink("Register", "Create", "Users", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "nav-link" })</li>
-        <li class="nav-item">@Html.ActionLink("Log in", "Login", "Login", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "nav-link" })</li>
-    </ul>
-  @*}*@
+<ul class="navbar-nav ml-auto">
+    @if (Session["user"] != null)
+    {
+        <li class="nav-item">
+            <span class="nav-link">Welcome @user.Firstname!</span>
+        </li>
+        <li class="nav-item">
+            @Html.ActionLink("Logout", "Logout", "Login", new { area = "" }, new { @class = "nav-link" })
+        </li>
+    }
+    else
+    {
+
+        <li class="nav-item">@Html.ActionLink("Join", "Create", "Users", routeValues: null, htmlAttributes: new { @class = "nav-link" })</li>
+        <li class="nav-item">@Html.ActionLink("Sign in", "Index", "Login", routeValues: null, htmlAttributes: new { @class = "nav-link" })</li>
+
+    }
+</ul>
